sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:12: error: not found: value getNombreValeur
      if(plusPetit(getNombreValeur()-2-i,getNombreValeur()-3-i)==true){
                   ^AlgCocktailSort1:12: error: not found: value i
      if(plusPetit(getNombreValeur()-2-i,getNombreValeur()-3-i)==true){
                                       ^AlgCocktailSort1:12: error: not found: value getNombreValeur
      if(plusPetit(getNombreValeur()-2-i,getNombreValeur()-3-i)==true){
                                         ^AlgCocktailSort1:12: error: not found: value i
      if(plusPetit(getNombreValeur()-2-i,getNombreValeur()-3-i)==true){
                                                             ^AlgCocktailSort1:13: error: not found: value getNombreValeur
        echange(getNombreValeur()-2-i,getNombreValeur()-3-i)
                ^AlgCocktailSort1:13: error: not found: value i
        echange(getNombreValeur()-2-i,getNombreValeur()-3-i)
                                    ^AlgCocktailSort1:13: error: not found: value getNombreValeur
        echange(getNombreValeur()-2-i,getNombreValeur()-3-i)
                                      ^AlgCocktailSort1:13: error: not found: value i
        echange(getNombreValeur()-2-i,getNombreValeur()-3-i)
                                                          ^