sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var test=false
  do{
    for(i <- 0 to getNombreValeurs()-2){
      if(plusPetit(i,i+1)==false){
        echange(i,i+1)
        test=true
      }
    }
    for(j <- 0 to getNombreValeurs()-2){
      if(plusPetit(getNombreValeur()-2-i,getNombreValeur()-3-i)==true){
        echange(getNombreValeur()-2-i,getNombreValeur()-3-i)
        test=true
      }
    }
  }
  while(test==true)
}